ArkivDokument: fix jackson bug boolsk verdi